[package]
name = "arduino-spi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1.2"


[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.avr-hal-generic]
#git = "https://github.com/rahix/avr-hal"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
git = "https://github.com/mutantbob/avr-hal.git"
branch="2022-mar-ufmt-fix"
#path="../../../vendor/avr-hal/avr-hal-generic"

[dependencies.arduino-hal]
#git = "https://github.com/rahix/avr-hal"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
git = "https://github.com/mutantbob/avr-hal.git"
branch="2022-mar-ufmt-fix"
#path="../../../vendor/avr-hal/arduino-hal"
features = ["arduino-uno"]

[dependencies.void]
version = "1.0.2"
default-features = false
