[package]
name = "arduino-spi"
version = "0.1.0"
edition = "2018"

[features]
board-selected = []
mcu-atmega = []
atmega2560 = ["mcu-atmega", "board-selected", "atmega-hal/atmega2560"]
atmega328p = ["mcu-atmega", "board-selected", "atmega-hal/atmega328p"]


[dependencies]
nb = "0.1.2"


[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"

[dependencies.void]
version = "1.0.2"
default-features = false
